fix: spacing for Structure title

--- a/src/pages/Structure/styles.css
+++ b/src/pages/Structure/styles.css
@@ -10,6 +10,10 @@
   font-style: normal;
   font-weight: 300;
   font-size: 61px;
+  line-height: 69px;
+  letter-spacing: -0.7px;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .project-trial-button-container {
